--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article class="box-left project project1">
       <h2>Cartographics - Project 1</h2>
       <aside class="right">
-      <ul class="tags">
+      <ul class="tags text-right">
         <li>in <a href="#">EPHEMERAL</a></li>
         <li>in <a href="#">PUBLIC SPACE</a></li>
       </ul>
@@ -44,18 +44,18 @@
       </aside>
     </article>
     <article class="box-right project project2">
-      <h2 class="right">Cartographics - Project 2</h2>
+      <h2 class="text-right">Cartographics - Project 2</h2>
       <aside>
         <ul class="tags">
           <li>in <a href="#">EPHEMERAL</a></li>
           <li>in <a href="#">PUBLIC SPACE</a></li>
         </ul>
-        <ul>
+        <ul class="description text-right">
           <li>2015</li>
           <li>BARCELONA</li>
           <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
-          <li><a href="#"><!--<img src="images/view.png" width="56" height="24" alt="view">-->VIEW PROJECT</a></li>
         </ul>
+        <div><a href="#"><img src="images/view.png" alt="view"/> <span>VIEW PROJECT</span></a></div>
       </aside>
     </article>
       <!--<div>
