--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="#" class="view view-left"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
-      <article class="box-right project project2">
+      <article class="box-right project project2 last">
         <h2 class="title-right">Cartographics - Project 2</h2>
         <aside>
           <ul class="tags">
@@ -57,16 +57,62 @@
           <a href="#" class="view view-right"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
-      <article class="box-right button-container">
+      <div>
+      <div class="box-right button-container">
         <a href="#" class="button projects">DISCOVER ALL</a>
-      </article>
+      </div>
+      </div>
     </section>
           
     <section id="short-resume">
-        <article>
-            <h1>- What I've done</h1>
-              <p>The different scales I’ve been working on in the recent years, through jobs or studies, have been hand-picked approaches to understand and to be close to design.</p>
-          </article>
+      <article class="resume">
+        <h1>- What I've done</h1>
+        <p>The different scales I’ve been working on in the recent years, through jobs or studies, have been hand-picked approaches to understand and to be close to design.</p>
+      </article>
+      <article class="resume">
+        <h3>PROFESSIONAL</h3>
+        <ul class="box-right list">
+          <li class="item"><span class="left">MASSIMO DUTTI - INDITEX</span><span class="right">03.2015 - 09.2015</span></li>
+          <li class="description"><span class="left">E-Commerce Department. Graphic and web design</span><span class="right">Barcelona, Spain</span></li>
+          <li class="item"><span class="left">MASSIMO DUTTI - INDITEX</span><span class="right">03.2015 - 09.2015</span></li>
+          <li class="description"><span class="left">E-Commerce Department. Graphic and web design</span><span class="right">Barcelona, Spain</span></li>
+          <li class="item"><span class="left">MASSIMO DUTTI - INDITEX</span><span class="right">03.2015 - 09.2015</span></li>
+          <li class="description"><span class="left">E-Commerce Department. Graphic and web design</span><span class="right">Barcelona, Spain</span></li>
+        </ul>
+      </article>
+      <article class="resume last">
+        <h3>EDUCATION</h3>
+        <ul class="box-right list">
+          <li class="item"><span class="left">MASSIMO DUTTI - INDITEX</span><span class="right">03.2015 - 09.2015</span></li>
+          <li class="description"><span class="left">E-Commerce Department. Graphic and web design</span><span class="right">Barcelona, Spain</span></li>
+          <li class="item"><span class="left">MASSIMO DUTTI - INDITEX</span><span class="right">03.2015 - 09.2015</span></li>
+          <li class="description"><span class="left">E-Commerce Department. Graphic and web design</span><span class="right">Barcelona, Spain</span></li>
+        </ul>
+      </article>
+      <div class="box-right button-container">
+        <a href="#" class="button">VIEW FULL CV</a>
+      </div>
+    </section>
+    <section id="contact">
+      <h1>- Get in Touch</h1>
+      <article class="contact-info">
+        <aside>
+          <p>I’m a Venezuelan based in Barcelona and I’m currently working as a graphic designer.</p>
+          <p>-</p>
+          <p>gaby.hernandezg@gmail.com</p>
+          <p>34 699 99 999</p>
+       </aside>
+        <div class="form-container">
+          <form>
+            <input name="name" autocomplet="off" placeholder="YOUR NAME">
+            <input name="email" autocomplete="off" placeholder="EMAIL">
+            <textarea name="description" rows="4" placeholder="SAY HI!"></textarea>
+            <div class="form-submit">
+              <a href="#">SEND <img src="images/send.png"/></a>
+            </div>
+          </form>
+        </div>
+      </article>
     </section>
   </div> 
 </body>
