Non responsive homepage is ready

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a href="#" class="button">VIEW FULL CV</a>
       </div>
     </section>
-    <section id="contact">
+    <section id="contact" class="last">
       <h1>- Get in Touch</h1>
       <article class="contact-info">
         <aside>
@@ -108,12 +108,15 @@
             <input name="email" autocomplete="off" placeholder="EMAIL">
             <textarea name="description" rows="4" placeholder="SAY HI!"></textarea>
             <div class="form-submit">
-              <a href="#">SEND <img src="images/send.png"/></a>
+              <a href="#" class="send">SEND</a>
             </div>
           </form>
         </div>
       </article>
     </section>
   </div> 
+  <a href="#" class="back-to-top"></a>
+
+  </div>
 </body>
 </html>
