Added project page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <div id="container" class="container">
-    <header class="navbar">
+    <header id="navigation" class="navbar">
         <div class="logo">GABRIELA HERNANDEZ G</div>
         <nav>
             <ul>
@@ -29,8 +29,8 @@
       <h1>- Selected projects</h1>
       <article class="box-left project project1">
         <h2>Cartographics - Project 1</h2>
-        <aside class="push-right">
-          <ul class="tags text-right">
+        <aside>
+          <ul class="tags">
             <li>in <a href="#">EPHEMERAL</a></li>
             <li>in <a href="#">PUBLIC SPACE</a></li>
           </ul>
@@ -39,27 +39,27 @@
               <li>BARCELONA</li>
               <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view view-left"><span>VIEW PROJECT</span></a>
+          <a href="#" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <article class="box-right project project2 last">
-        <h2 class="title-right">Cartographics - Project 2</h2>
+        <h2>Cartographics - Project 2</h2>
         <aside>
           <ul class="tags">
             <li>in <a href="#">EPHEMERAL</a></li>
             <li>in <a href="#">PUBLIC SPACE</a></li>
           </ul>
-          <ul class="description text-right">
+          <ul class="description">
             <li>2015</li>
             <li>BARCELONA</li>
             <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view view-right"><span>VIEW PROJECT</span></a>
+          <a href="#" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <div>
       <div class="box-right button-container">
-        <a href="#" class="button projects">DISCOVER ALL</a>
+        <a href="projects.html" class="button projects">DISCOVER ALL</a>
       </div>
       </div>
     </section>
@@ -115,7 +115,7 @@
       </article>
     </section>
   </div> 
-  <a href="#" class="back-to-top"></a>
+  <a href="#navigation" class="back-to-top"></a>
 
   </div>
 </body>
