--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <div id="container" class="container">
+  <div id="container" class="container container-blue">
     <header id="navigation" class="navbar">
         <div class="logo">GABRIELA HERNANDEZ G</div>
         <nav>
@@ -39,7 +39,7 @@
               <li>BARCELONA</li>
               <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <article class="box-right project project2 last">
@@ -54,7 +54,7 @@
             <li>BARCELONA</li>
             <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <div>
@@ -90,7 +90,7 @@
         </ul>
       </article>
       <div class="box-right button-container">
-        <a href="#" class="button">VIEW FULL CV</a>
+        <a href="resume.html" class="button">VIEW FULL CV</a>
       </div>
     </section>
     <section id="contact" class="last">
