--- a/projects.html
+++ b/projects.html
@@ -8,14 +8,14 @@
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <div id="container" class="container">
+  <div id="container" class="container container-blue">
     <header id="navigation" class="navbar">
         <div class="logo">GABRIELA HERNANDEZ G</div>
         <nav>
             <ul>
-                <li><a href="#selected-projects">WORK</a></li>
-                  <li><a href="#short-resume">CV</a></li>
-                  <li><a href="#contact">CONTACT</a></li>
+                <li><a href="index.html#selected-projects">WORK</a></li>
+                  <li><a href="index.html#short-resume">CV</a></li>
+                  <li><a href="index.html#contact">CONTACT</a></li>
               </ul>
         </nav>
     </header>
