Plain html/css prototype

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <div id="container" class="container container-blue">
+  <div id="top" class="container container-blue">
     <header id="navigation" class="navbar">
-        <div class="logo">GABRIELA HERNANDEZ G</div>
+        <div class="logo"><a href="index.html">GABRIELA HERNANDEZ G</a></div>
         <nav>
             <ul>
                 <li><a href="#selected-projects">WORK</a></li>
@@ -115,8 +115,7 @@
       </article>
     </section>
   </div> 
-  <a href="#navigation" class="back-to-top"></a>
-
+    <a href="#top" class="back-to-top back-to-top-right"></a>
   </div>
 </body>
 </html>
