--- a/project.html
+++ b/project.html
@@ -7,21 +7,21 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
-<body>
-  <div id="container" class="container">
-    <header id="navigation" class="navbar">
-        <div class="logo">GABRIELA HERNANDEZ G</div>
-        <nav>
-            <ul>
-                <li><a href="index.html/#selected-projects">WORK</a></li>
-                  <li><a href="index.html/#short-resume">CV</a></li>
-                  <li><a href="index.html/#contact">CONTACT</a></li>
-              </ul>
-        </nav>
-    </header>
-    <div class="project-top-img">
+ <body class="no-top-padding no-bottom-padding">
+  <header id="navigation" class="navbar navbar-float">
+    <div class="logo"><a href="index.html">GABRIELA HERNANDEZ G</a></div>
+      <nav>
+          <ul>
+              <li><a href="index.html/#selected-projects">WORK</a></li>
+                <li><a href="index.html/#short-resume">CV</a></li>
+                <li><a href="index.html/#contact">CONTACT</a></li>
+            </ul>
+      </nav>
+  </header>
+  <div class="project-top-img">
       <img src="images/1780x980.jpg"/>
-    </div>
+  </div>
+  <div class="container-project">
     <section class="project">
       <article class="project-info">
         <h1>Urban Pathways</h1>
@@ -38,14 +38,26 @@
       <div class="project-img">
         <img src="images/820x1040.jpg"/>
       </div>
-      <div class="project-img">
+      <div class="project-img last">
         <img src="images/820x580.jpg"/>
       </div>
     </section>
-    <footer>
-    </footer>
   </div> 
-  <a href="#navigation" class="back-to-top"></a>
+  <footer class="project-footer">
+    <div class="project-links">
+    <ul class="previous push-left">
+      <li class="view-top"><a href="#">previous project</a></li>
+      <li class="title">Project 1 - Info 1</li>
+    </ul>
+    <ul class="next push-right">
+      <li class="view-top"><a href="#">next project</a></li>
+      <li class="title">Project 3 - Info 3</li>
+    </ul>
+    </div>
+    <div class="back-to-top-centered">
+      <a href="#top" class="back-to-top">&nbsp;</a>
+    </div>
+  </footer>
   </div>
 </body>
 </html>
