--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
   <div id="container" class="container container-blue">
     <header id="navigation" class="navbar">
-        <div class="logo">GABRIELA HERNANDEZ G</div>
+        <div class="logo"><a href="index.html">GABRIELA HERNANDEZ G</a></div>
         <nav>
             <ul>
                 <li><a href="index.html#selected-projects">WORK</a></li>
@@ -33,7 +33,7 @@
               <li>BARCELONA</li>
               <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <article class="box-right project project2">
@@ -48,7 +48,7 @@
               <li>BARCELONA</li>
               <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <article class="box-right project project2">
@@ -63,7 +63,7 @@
             <li>BARCELONA</li>
             <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
       <article class="box-left project project1 last">
@@ -78,11 +78,11 @@
             <li>BARCELONA</li>
             <li>MASTER'S DEGREE<br>FINAL PROJECT</li>
           </ul>
-          <a href="#" class="view"><span>VIEW PROJECT</span></a>
+          <a href="project.html" class="view"><span>VIEW PROJECT</span></a>
         </aside>
       </article>
     </section>
-  <a href="#navigation" class="back-to-top"></a>
+    <a href="#top" class="back-to-top back-to-top-right"></a>
   </div>
 </body>
 </html>
