--- a/resume.html
+++ b/resume.html
@@ -10,14 +10,14 @@
 <body>
   <div id="container" class="container container-blue">
     <header id="navigation" class="navbar">
-        <div class="logo">GABRIELA HERNANDEZ G</div>
-        <nav>
-            <ul>
-                <li><a href="index.html#selected-projects">WORK</a></li>
-                  <li><a href="index.html#short-resume">CV</a></li>
-                  <li><a href="index.html#contact">CONTACT</a></li>
-              </ul>
-        </nav>
+      <div class="logo"><a href="index.html">GABRIELA HERNANDEZ G</a></div>
+      <nav>
+          <ul>
+              <li><a href="index.html#selected-projects">WORK</a></li>
+                <li><a href="index.html#short-resume">CV</a></li>
+                <li><a href="index.html#contact">CONTACT</a></li>
+            </ul>
+      </nav>
     </header>
     <section id="resume">
       <article class="resume">
@@ -46,8 +46,7 @@
       </article>
     </section>
   </div> 
-  <a href="#navigation" class="back-to-top"></a>
-
+  <a href="#top" class="back-to-top back-to-top-right"></a>
   </div>
 </body>
 </html>
