--- a/project.html
+++ b/project.html
@@ -12,9 +12,9 @@
     <div class="logo"><a href="index.html">GABRIELA HERNANDEZ G</a></div>
       <nav>
           <ul>
-              <li><a href="index.html/#selected-projects">WORK</a></li>
-                <li><a href="index.html/#short-resume">CV</a></li>
-                <li><a href="index.html/#contact">CONTACT</a></li>
+              <li><a href="index.html#selected-projects">WORK</a></li>
+                <li><a href="index.html#short-resume">CV</a></li>
+                <li><a href="index.html#contact">CONTACT</a></li>
             </ul>
       </nav>
   </header>
